--- a/app/views/new.html
+++ b/app/views/new.html
@@ -1,6 +1,10 @@
 <div class="col-sm-6 col-md-6 col-lg-6">
     <p>Markdown</p>
     <textarea id="editor" minlength="5" name="post_body" class="form-control" required></textarea>
+    <p>pid</p>
+    <textarea id="pid" minlength="1" name="pid" class="form-control"  required></textarea>
+    <p>deepth</p>
+    <textarea id="deepth" minlength="1" name="deepth" class="form-control"  required></textarea>
 </div>
 <div class="no_pad_right col-sm-6 col-md-6 col-lg-6">
     <p>Live HTML</p>
