新增修改目录已正常

--- a/app/views/editmenu.html
+++ b/app/views/editmenu.html
@@ -1,6 +1,6 @@
 <div>
-    <p>Markdown</p>
-    <textarea id="name" minlength="5" name="post_body" class="form-control"  required></textarea>
+    <p>Editmenu</p>
+    <textarea id="editor" minlength="5" name="post_body" class="form-control"  required></textarea>
     <p>pid</p>
     <textarea id="pid" minlength="1" name="pid" class="form-control"  required></textarea>
     <p>deepth</p>
