--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,1 +1,27 @@
 <div class="mainBody"></div>
+<script>
+    $(function() {
+        $.contextMenu({
+            selector: '.fa', 
+            callback: function(key, options) {
+                var m = "clicked: " + key;
+                window.console && console.log(m) || alert(m); 
+            },
+            items: {
+                "edit": {name: "Edit", icon: "edit"},
+                "cut": {name: "Cut", icon: "cut"},
+               copy: {name: "Copy", icon: "copy"},
+                "paste": {name: "Paste", icon: "paste"},
+                "delete": {name: "Delete", icon: "delete"},
+                "sep1": "---------",
+                "quit": {name: "Quit", icon: function(){
+                    return 'context-menu-icon context-menu-icon-quit';
+                }}
+            }
+        });
+
+        $('.fa').on('click', function(e){
+            console.log('clicked', this);
+        })    
+    });
+</script>
